Updated pictures Fixed Header picture bleed Added links to About, Works and Discography

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -53,6 +53,9 @@
   animation: fadeSlide 0.5s ease forwards;
 }
 
+.about-text a {
+  text-decoration: underline;
+}
 @keyframes fadeSlide {
   from {
     opacity: 0;
