--- a/src/styles/discography.css
+++ b/src/styles/discography.css
@@ -53,3 +53,7 @@
   font-size: 0.95rem;
   color: #aaa;
 }
+
+a:hover {
+  text-decoration: underline;
+}
